dev/manifests/cluster-config/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "kubernetes-webhook.acme.com"
webhooks:
  - name: "kubernetes-webhook.acme.com"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: kubernetes-webhook
        path: /mutate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwRENDQWJnQ0NRQ3c5aXE3aUZaWU56QU5CZ2tx
[...]
        IENFUlRJRklDQVRFLS0tLS0K
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
